--- a/0_Introduction.ipynb
+++ b/0_Introduction.ipynb
@@ -1,6 +1,5 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "codemirror_mode": {
     "name": "ipython",
@@ -11,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:9d99f05154a602afc4d8c8efb54a1e5aac2cea0aa51b369d96a72fd8b9bd1cb1"
+  "signature": "sha256:b7e86d8739d4c8502166e5af021bffd457db0c46dac442952780f1789bcc0879"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -164,6 +163,375 @@
       "<img src=\"images/usb_drives.jpg\">\n",
       "\n",
       "Please copy the contents of the USB flash drive and *return the drive* :-)."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Overview"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "Reproducible Research"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_number": 11,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "J.R. Johansson: A sound **scientific result** should be **reproducible**, and a sound **scientific study** should be **replicable**.\n",
+      "\n",
+      "To achieve these goals, we need to:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 12
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "* Keep and take note of *exactly* which source code and version that was used to produce data and figures in published papers."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 13
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "* Record information of which version of external software that was used. Keep access to the environment that was used."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 14
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "* Make sure that old codes and notes are backed up and kept for future reference. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 15
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "* Be ready to give additional information about the methods used, and perhaps also the simulation codes, to an interested reader who requests it (even years after the paper was published!)."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "* Ideally codes should be published online, to make it easier for other scientists interested in the codes to access it."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
+     "source": [
+      "Credit: http://nbviewer.ipython.org/github/jrjohansson/scientific-python-lectures/blob/master/Lecture-0-Scientific-Computing-with-Python.ipynb"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "Outline"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 16,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "1) Creating a reproducible computational environment with Docker."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 20
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "2) Interactive analysis and literate programming with the IPython notebook."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 21
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "3) A brief survey of the fundamental scientific Python packages: numpy, matplotlib, scipy, sympy, pandas, nose."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 22
+      },
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "4) Writing efficient, compiled C/Python hybrid code with Cython."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "5) Wrapping C and C++ libraries in python with XDress."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Learn more!"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "Basic References"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "* [Think Python](http://www.greenteapress.com/thinkpython/) - Hightly taughted, free introductory book on Python programming.\n",
+      "* [Official Python.org Docs](http://docs.python.org) - The official web page of the Python programming language."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "IPython Notebooks"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "* [A Crash Course in Python for Scientists](http://nbviewer.ipython.org/gist/rpmuller/5920182) - by Rick Muller.\n",
+      "* [J.R. Johansson's Scientific Python Lectures](http://github.com/jrjohansson/scientific-python-lectures) - Much of the content here is borrowed directly from this outstanding series.\n",
+      "* [IPython Cookbook by Cyrille Rossant](https://ipython-books.github.io/cookbook/) - Much of the content here is borrowed directly from this outstanding series.\n",
+      "* [IPython Minibook by Cyrille Rossant](https://ipython-books.github.io/minibook/) - Much of the content here is borrowed directly from this outstanding series.\n",
+      "* [A gallery of interesting IPython Notebooks](https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks) - various authors.\n",
+      "* [IPython repository Notebooks](http://nbviewer.ipython.org/github/ipython/ipython/blob/2.x/examples/Index.ipynb) - Great examples and tutorials on how to use IPython, create interative notebook widgets, etc.\n"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "Advanced References"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 23,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "* [Python Essential Reference](http://www.amazon.com/Python-Essential-Reference-4th-Edition/dp/0672329786) - A good reference book on Python programming.\n",
+      "* [A Hacker's Guide To Python](https://julien.danjou.info/books/the-hacker-guide-to-python) - A down to the roots understanding of how Python works.\n",
+      "* [PEP 8](http://www.python.org/dev/peps/pep-0008) - Style guide for Python programming."
      ]
     }
    ],
