--- a/5_XDress.ipynb
+++ b/5_XDress.ipynb
@@ -11,7 +11,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:01459c725d36be479cf36ecca32ae618fbe571b38bb14f21d4c81caeef65ac43"
+  "signature": "sha256:e633764e3c0d80b257e25df6125cd9f7745600fbb47fe03ac6ae87fd8511fd95"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -145,14 +145,27 @@
      ]
     },
     {
-     "cell_type": "markdown",
-     "metadata": {
-      "internals": {},
-      "slideshow": {
-       "slide_type": "-"
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import ipywidgets"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "ImportError",
+       "evalue": "No module named ipywidgets",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+        "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-1-eda6eb64c72d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mipywidgets\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mImportError\u001b[0m: No module named ipywidgets"
+       ]
       }
-     },
-     "source": []
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
