--- a/1_Docker.ipynb
+++ b/1_Docker.ipynb
@@ -1,9 +1,254 @@
 {
  "metadata": {
+  "kernelspec": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "display_name": "IPython (Python 2)",
+   "language": "python",
+   "name": "python2"
+  },
   "name": "",
-  "signature": "sha256:4c1fd2b8d28f5f12a20ba68ae1f619406b15c773b0ff45b19d38abd3c6a6f134"
+  "signature": "sha256:1ab36a5c45ed25a1e65a3616dbaa76a769e3b943db675a3cfc904a4d539a2e4e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
- "worksheets": []
+ "worksheets": [
+  {
+   "cells": [
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Docker"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "The Problem"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "Even though computers are often considered deterministic, **computational software is a rapidly evolving and changing landscape**. Libraries are constantly adding new features and fixing issues. Even libraries with the strictest backwards-compatibility policies can change in significant ways. As **computer hardware evolves**, software is forced to adapt accordingly."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "A replicatable computational environment is **sufficiently consistent for the computational task at hand**. For example, this can consist of a similar CPU instruction set, libraries and executables available with a specific version and configuration options, a specific operating system version, etc."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Close But Not Good Enough"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "### Source code\n",
+      "\n",
+      "Does not include:\n",
+      "\n",
+      "- Compiler\n",
+      "- Hardware it was built on\n",
+      "- How it is configured"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "### Package managers and distributions\n",
+      "\n",
+      "- Packages become unsupported over time\n",
+      "- What to do if a required library is not packaged?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "### Virtual Machines (VMs)\n",
+      "\n",
+      "- Inefficient utilization of computational resources"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Docker Improvements"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "<img src=\"images/docker-filesystems-multilayer.png\" width=500>\n",
+      "\n",
+      "Docker is an open-source engine that automates the deployment of any application as a lightweight, portable, self-sufficient container that will run virtually anywhere."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "<img src=\"images/docker_vm.jpg\" width=\"600\">\n",
+      "\n",
+      "Docker works with images that **consume minimal disk space**, **versioned**, **archiveable**, and **shareable**. Executing applications in these images does not require dedicated resources and is high performance."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Learn more!"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "* [Interactive Brower-Based Docker Tutorial](https://www.docker.com/tryit/)\n",
+      "* [Docker Documentation](https://docs.docker.com/userguide/)\n",
+      "* [Reproducible Research: Walking the Walk Tutorial](https://reproducible-research.github.io/scipy-tutorial-2014/)"
+     ]
+    }
+   ],
+   "metadata": {}
+  }
+ ]
 }
