--- a/1_Docker.ipynb
+++ b/1_Docker.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:1ab36a5c45ed25a1e65a3616dbaa76a769e3b943db675a3cfc904a4d539a2e4e"
+  "signature": "sha256:1e5bd22f226daa0f052cecb1b5f52f203b830c8557345070b1a01b0694dc798d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -244,7 +244,8 @@
      "source": [
       "* [Interactive Brower-Based Docker Tutorial](https://www.docker.com/tryit/)\n",
       "* [Docker Documentation](https://docs.docker.com/userguide/)\n",
-      "* [Reproducible Research: Walking the Walk Tutorial](https://reproducible-research.github.io/scipy-tutorial-2014/)"
+      "* [Reproducible Research: Walking the Walk Tutorial](https://reproducible-research.github.io/scipy-tutorial-2014/)\n",
+      "* [IPython DockerHub Repositories](https://registry.hub.docker.com/repos/ipython/)"
      ]
     }
    ],
